external-crates/move/crates/move-compiler/tests/move_check/typing/block_with_statements_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/block_with_statements_invalid.move:4:32
  │
4 │         ({ let x = 0u64; x } : bool);
  │                    ----        ^^^^
  │                    │           │
  │                    │           Invalid type annotation
  │                    │           Expected: 'bool'
  │                    Given: 'u64'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/block_with_statements_invalid.move:5:33
  │
5 │         ({ let x = 0u64; &x } : u64);
  │                          --     ^^^
  │                          │      │
  │                          │      Invalid type annotation
  │                          │      Expected: 'u64'
  │                          Given: '&u64'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/block_with_statements_invalid.move:6:43
  │
6 │         ({ let y = 0u64; &mut (y + 1) } : ());
  │                          ------------     ^^
  │                          │                │
  │                          │                Invalid type annotation
  │                          │                Expected: '()'
  │                          Given: '&mut u64'

error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/block_with_statements_invalid.move:7:9
  │
2 │     struct R {}
  │            - To satisfy the constraint, the 'drop' ability would need to be added here
  ·
7 │         ({ let r = { let r = R {}; r }; r } : R);
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │         │                                     │
  │         │                                     The type '0x8675309::M::R' does not have the ability 'drop'
  │         Cannot ignore values without the 'drop' ability. The value must be used

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/block_with_statements_invalid.move:8:48
  │
8 │         ({ let x = 0u64; (x, false, false) } : (u64, bool));
  │                          -----------------     ^^^^^^^^^^^
  │                          │                     │
  │                          │                     Invalid type annotation
  │                          │                     Expected expression list of length 2: '(u64, bool)'
  │                          Given expression list of length 3: '(u64, bool, bool)'
